<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simple_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleCalculatorActivity">

    <TextView
        android:id="@+id/calculator_displayed_value_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="9001sp"
        android:autoSizeTextType="uniform"
        android:gravity="end"
        android:text="@string/calculator_default_value"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/calculator_divide_button"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".9" />

    <Button
        android:id="@+id/calculator_clear_button"
        style="@style/Theme.Calculator.Button.LightGray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_clear_button_title_all"
        app:layout_constraintBottom_toTopOf="@id/calculator_7_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_sign_flip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_sign_flip_button"
        style="@style/Theme.Calculator.Button.LightGray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_sign_flip_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_8_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_percent_button"
        app:layout_constraintStart_toEndOf="@id/calculator_clear_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_percent_button"
        style="@style/Theme.Calculator.Button.LightGray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_percent_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_9_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_divide_button"
        app:layout_constraintStart_toEndOf="@id/calculator_sign_flip_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_divide_button"
        style="@style/Theme.Calculator.Button.Orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_divide_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_multiply_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculator_percent_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_7_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_7_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_4_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_8_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_8_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_8_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_5_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_9_button"
        app:layout_constraintStart_toEndOf="@id/calculator_7_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_9_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_9_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_6_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_multiply_button"
        app:layout_constraintStart_toEndOf="@id/calculator_8_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_multiply_button"
        style="@style/Theme.Calculator.Button.Orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_multiply_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_subtract_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculator_9_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_4_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_4_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_1_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_5_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_5_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_5_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_2_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_6_button"
        app:layout_constraintStart_toEndOf="@id/calculator_4_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_6_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_6_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_3_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_subtract_button"
        app:layout_constraintStart_toEndOf="@id/calculator_5_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_subtract_button"
        style="@style/Theme.Calculator.Button.Orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_subtract_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_add_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculator_6_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_1_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_1_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_0_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_2_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_2_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_2_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_0_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_3_button"
        app:layout_constraintStart_toEndOf="@id/calculator_1_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_3_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_3_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_point_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_add_button"
        app:layout_constraintStart_toEndOf="@id/calculator_2_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_add_button"
        style="@style/Theme.Calculator.Button.Orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_add_button_title"
        app:layout_constraintBottom_toTopOf="@id/calculator_equals_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculator_3_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_0_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleX=".9"
        android:text="@string/calculator_0_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_point_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <Button
        android:id="@+id/calculator_point_button"
        style="@style/Theme.Calculator.Button.Gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_point_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/calculator_equals_button"
        app:layout_constraintStart_toEndOf="@id/calculator_0_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/calculator_equals_button"
        style="@style/Theme.Calculator.Button.Orange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/calculator_equals_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/calculator_point_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".25" />

</androidx.constraintlayout.widget.ConstraintLayout>